After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749306 - Incorrect updates available notification
Incorrect updates available notification
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-05-13 11:22 UTC by Allan Day
Modified: 2015-06-23 14:26 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Allan Day 2015-05-13 11:22:54 UTC
Today I rebooted my machine. After rebooting, I noticed an old "updates available" notification sitting in my notification list. When I clicked on it, Software was launched, showing the "checking for updates" spinner.

The notification was clearly incorrect - it was saying that updates were available when they weren't - and it was a bit annoying, because it essentially wasted my time.

It would be good to remove/revoke any "updates available" notifications if they are no longer correct.
Comment 1 Kalev Lember 2015-06-23 14:17:46 UTC
Thanks Allan!

I pushed several fixes for this to master to make sure that old notifications get cleared out. It turned out to be not solely a gnome-software bug, but also glib's g_application_withdraw_notification() didn't work right.

https://git.gnome.org/browse/glib/commit/?id=c612fcab0fb2d3f0bdaf011d5b566dc949dbd18a
https://git.gnome.org/browse/gnome-software/commit/?id=710147c46d3dbc817987a4635419fa334e5595b1
https://git.gnome.org/browse/gnome-software/commit/?id=dff5d863d8f7ed2d61cba67c42de7a7b925d5851
Comment 2 Allan Day 2015-06-23 14:26:20 UTC
Excellent! Thanks Kalev.