Withdraw notification when prepared update gets invalidated

When something external touches the package database and PackageKit
removes the /usr/lib/PackageKit/prepared-update file, make sure we also
withdraw the "Updates Available" notification. This ensures that we
don't leave behind stale notifications that open up a blank "Software is
up to date" page.

https://bugzilla.gnome.org/show_bug.cgi?id=749306